@@ -856,6 +856,10 @@
 	<name>
 		<last>stephan</last>
 	</name>
+  <name>
+    <first>Stephan</first>
+    <last>Michels</last>
+  </name>
 	<name>
 		<first>Stephen</first>
 		<last>Chin</last>
