@@ -1,5 +1,5 @@
 /*
- * Copyright  2000-2005 The Apache Software Foundation
+ * Copyright  2000-2006 The Apache Software Foundation
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -665,6 +665,7 @@ public class WeblogicDeploymentTool extends GenericDeploymentTool {
         JarFile wlJar = null;
         File newWLJarFile = null;
         JarOutputStream newJarStream = null;
+        ClassLoader genericLoader = null;
 
         try {
             log("Checking if weblogic Jar needs to be rebuilt for jar " + weblogicJarFile.getName(),
@@ -694,8 +695,7 @@ public class WeblogicDeploymentTool extends GenericDeploymentTool {
                 }
 
                 //Cycle Through generic and make sure its in weblogic
-                ClassLoader genericLoader
-                    = getClassLoaderFromJar(genericJarFile);
+                genericLoader = getClassLoaderFromJar(genericJarFile);
 
                 for (Enumeration e = genericEntries.keys(); e.hasMoreElements();) {
                     String filepath = (String) e.nextElement();
@@ -797,11 +797,6 @@ public class WeblogicDeploymentTool extends GenericDeploymentTool {
                     log("Weblogic Jar rebuild needed due to changed "
                          + "interface or XML", Project.MSG_VERBOSE);
                 }
-
-                if (genericLoader instanceof AntClassLoader) {
-                    AntClassLoader loader = (AntClassLoader) genericLoader;
-                    loader.cleanup();
-                }
             } else {
                 rebuild = true;
             }
@@ -845,6 +840,11 @@ public class WeblogicDeploymentTool extends GenericDeploymentTool {
                     log(renameException.getMessage(), Project.MSG_WARN);
                     rebuild = true;
                 }
+            }
+            if (genericLoader != null
+                && genericLoader instanceof AntClassLoader) {
+                AntClassLoader loader = (AntClassLoader) genericLoader;
+                loader.cleanup();
             }
         }
 
